Fix min-height on narrow screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -460,10 +460,12 @@ footer .text {
 }
 
 @media only screen and (max-width: 600px) {
-
-
   .section {
     min-height: 100vh;
+  }
+
+  .section-one {
+    min-height: calc(100vh - 60px);
   }
 
   .section-ten {
@@ -545,16 +547,8 @@ footer .text {
   }
 }
 
-@media only screen and (max-width: 600px) and (orientation:landscape) {
-  .section {
-    min-height: 100vh;
-  }
-
-}
-
 @media only screen and (max-width: 992px) and (orientation:landscape) {
   .section {
     min-height: 100vh;
   }
-  
 }
